Fixing some broken tests